--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v0.1.1 - 1/6/21
+    Fixed major bug that overwrote progress
+    
 v0.1.0 - 1/6/21
     Made changelog.txt
     Fixed making new save data if there was none
