--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v0.1.2 - 1/7/21
+    Version text is now in bottom right as not not be covered by hovering over anchors
+    Drills now unlock when you meet the requirements to buy them
+
 v0.1.1 - 1/6/21
     Fixed major bug that overwrote progress
     
