--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v0.5.2 - 1/19/21
+    Fixed bug where power didnt update
+
 v0.5.1 - 1/19/21
     Buildings now quadruple in power every 25 purchases from 100-1000, and by ten every 100 purchases from 1000-10000
 
